@@ -188,6 +188,9 @@ Optimizations
 * LUCENE-4236: Optimize BooleanQuery's in-order scoring. This speeds up
   some types of boolean queries.  (Robert Muir)
 
+* LUCENE-5694: Don't score() subscorers in DisjunctionSumScorer or 
+  DisjunctionMaxScorer unless score() is called.  (Robert Muir)
+
 Bug fixes
 
 * LUCENE-5673: MMapDirectory: Work around a "bug" in the JDK that throws
